Immutability with JDK 14 Records